WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
94997
REGRESSION: WebProcessProxy destructor is sometimes called recursively
https://bugs.webkit.org/show_bug.cgi?id=94997
Summary
REGRESSION: WebProcessProxy destructor is sometimes called recursively
Alexey Proskuryakov
Reported
2012-08-24 20:46:40 PDT
We're seeing sees this crash, which is obviously caused by my recent change to keep a vector of WebProcessProxies in a context: 3 com.apple.WebKit2 0x000000010a26d8b9 WebKit::WebProcessProxy::~WebProcessProxy() + 17 4 com.apple.WebKit2 0x000000010a2e95b5 WTF::Vector<WTF::RefPtr<WebKit::WebProcessProxy>, 0ul>::shrink(unsigned long) + 65 5 com.apple.WebKit2 0x000000010a2e9545 WTF::Vector<WTF::RefPtr<WebKit::WebProcessProxy>, 0ul>::~Vector() + 25 6 com.apple.WebKit2 0x000000010a2e5751 WebKit::WebContext::~WebContext() + 17 7 com.apple.WebKit2 0x000000010a34017b WebKit::WebProcessProxy::~WebProcessProxy() + 313 8 com.apple.WebKit2 0x000000010a26d8b9 WebKit::WebProcessProxy::~WebProcessProxy() + 17 9 com.apple.WebKit2 0x000000010a2e7567 WTF::Vector<WTF::RefPtr<WebKit::WebProcessProxy>, 0ul>::remove(unsigned long) + 41 10 com.apple.WebKit2 0x000000010a26d1dc WebKit::WebProcessProxy::disconnect() + 326 <
rdar://problem/12157689
>
Attachments
proposed fix
(1.70 KB, patch)
2012-08-24 20:51 PDT
,
Alexey Proskuryakov
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2012-08-24 20:51:33 PDT
Created
attachment 160551
[details]
proposed fix
WebKit Review Bot
Comment 2
2012-08-24 21:54:47 PDT
Comment on
attachment 160551
[details]
proposed fix Clearing flags on attachment: 160551 Committed
r126679
: <
http://trac.webkit.org/changeset/126679
>
WebKit Review Bot
Comment 3
2012-08-24 21:54:50 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug