<rdar://problem/12157689> REGRESSION: WebProcessProxy destructor is sometimes called recursively https://bugs.webkit.org/show_bug.cgi?id=94997

Reviewed by Dan Bernstein.

* UIProcess/WebContext.cpp: (WebKit::WebContext::disconnectProcess): Make sure that
we don't try to delete WebProcessProxy while the vector still contains it. Previously,
we used RefPtr::clear, which zeroes out the value before destructing, but doing that
in every RefPtr destructor would be bad for performance.


Canonical link: https://commits.webkit.org/112861@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@126679 268f45cc-cd09-0410-ab3c-d52691b4dbfc